# debug_galaxy_s7

./: CMakeLists.txt  README.md
cpp/: claim_interface.cpp  fxload.cpp  listdevs.cpp  native-lib.cpp  native-lib.h  thread.h  usb_core.cpp  usb_core.h  usb_device.h  usb_exit.cpp  usb_init.cpp  usb_init.h  usb_open.cpp  usb_set.cpp  usbi_backend.cpp  usbi_backend.h
usb_binary/001/: 002
usb_binary/001/001/: 001
usb_binary/002/: 001
